Source/Alternet.UI.Pal/Api/TreeView.Api.h

using namespace Alternet::UI;
ALTERNET_UI_API TreeView* TreeView_Create_()
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<TreeView*>([&](){
    #endif
        return new TreeView();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API int64_t TreeView_GetCreateStyle_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<int64_t>([&](){
    #endif
        return obj->GetCreateStyle();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetCreateStyle_(TreeView* obj, int64_t value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetCreateStyle(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool TreeView_GetHideRoot_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetHideRoot();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetHideRoot_(TreeView* obj, c_bool value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetHideRoot(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool TreeView_GetVariableRowHeight_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetVariableRowHeight();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetVariableRowHeight_(TreeView* obj, c_bool value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetVariableRowHeight(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool TreeView_GetTwistButtons_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetTwistButtons();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetTwistButtons_(TreeView* obj, c_bool value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetTwistButtons(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API uint32_t TreeView_GetStateImageSpacing_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<uint32_t>([&](){
    #endif
        return obj->GetStateImageSpacing();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetStateImageSpacing_(TreeView* obj, uint32_t value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetStateImageSpacing(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API uint32_t TreeView_GetIndentation_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<uint32_t>([&](){
    #endif
        return obj->GetIndentation();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetIndentation_(TreeView* obj, uint32_t value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetIndentation(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool TreeView_GetRowLines_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetRowLines();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetRowLines_(TreeView* obj, c_bool value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetRowLines(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool TreeView_GetHasBorder_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetHasBorder();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetHasBorder_(TreeView* obj, c_bool value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetHasBorder(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API ImageList* TreeView_GetImageList_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<ImageList*>([&](){
    #endif
        return obj->GetImageList();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetImageList_(TreeView* obj, ImageList* value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetImageList(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* TreeView_GetRootItem_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->GetRootItem();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API TreeViewSelectionMode TreeView_GetSelectionMode_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<TreeViewSelectionMode>([&](){
    #endif
        return obj->GetSelectionMode();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetSelectionMode_(TreeView* obj, TreeViewSelectionMode value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetSelectionMode(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool TreeView_GetShowLines_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetShowLines();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API TreeViewHitTestLocations TreeView_GetHitTestResultLocations_(TreeView* obj, void* hitTestResult)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<TreeViewHitTestLocations>([&](){
    #endif
        return obj->GetHitTestResultLocations(hitTestResult);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* TreeView_GetHitTestResultItem_(TreeView* obj, void* hitTestResult)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->GetHitTestResultItem(hitTestResult);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_FreeHitTestResult_(TreeView* obj, void* hitTestResult)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->FreeHitTestResult(hitTestResult);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool TreeView_IsItemSelected_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->IsItemSelected(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetFocused_(TreeView* obj, void* item, c_bool value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetFocused(item, value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool TreeView_IsItemFocused_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->IsItemFocused(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetItemText_(TreeView* obj, void* item, const char16_t* text)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetItemText(item, text);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API char16_t* TreeView_GetItemText_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<char16_t*>([&](){
    #endif
        return AllocPInvokeReturnString(obj->GetItemText(item));
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetItemImageIndex_(TreeView* obj, void* item, int imageIndex)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetItemImageIndex(item, imageIndex);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API int TreeView_GetItemImageIndex_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetItemImageIndex(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_BeginLabelEdit_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->BeginLabelEdit(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_EndLabelEdit_(TreeView* obj, void* item, c_bool cancel)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->EndLabelEdit(item, cancel);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_ExpandItem_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->ExpandItem(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_CollapseItem_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->CollapseItem(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_ExpandAllChildren_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->ExpandAllChildren(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_CollapseAllChildren_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->CollapseAllChildren(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_EnsureVisible_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->EnsureVisible(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_ScrollIntoView_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->ScrollIntoView(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetEventCallback_(TreeView::TreeViewEventCallbackType callback)
{
    TreeView::SetEventCallback(callback);
}