Source/Alternet.UI/Native/TreeView.Generated.cs

        
        public Alternet.UI.TreeViewHitTestLocations GetHitTestResultLocations(System.IntPtr hitTestResult)
        {
            CheckDisposed();
            return NativeApi.TreeView_GetHitTestResultLocations_(NativePointer, hitTestResult);
        }
        
        public System.IntPtr GetHitTestResultItem(System.IntPtr hitTestResult)
        {
            CheckDisposed();
            return NativeApi.TreeView_GetHitTestResultItem_(NativePointer, hitTestResult);
        }
        
        public void FreeHitTestResult(System.IntPtr hitTestResult)
        {
            CheckDisposed();
            NativeApi.TreeView_FreeHitTestResult_(NativePointer, hitTestResult);
        }
        
        public bool IsItemSelected(System.IntPtr item)
        {
            CheckDisposed();
            return NativeApi.TreeView_IsItemSelected_(NativePointer, item);
        }
        
        public void SetFocused(System.IntPtr item, bool value)
        {
            CheckDisposed();
            NativeApi.TreeView_SetFocused_(NativePointer, item, value);
        }
        
        public bool IsItemFocused(System.IntPtr item)
        {
            CheckDisposed();
            return NativeApi.TreeView_IsItemFocused_(NativePointer, item);
        }
        
        public void SetItemText(System.IntPtr item, string text)
        {
            CheckDisposed();
            NativeApi.TreeView_SetItemText_(NativePointer, item, text);
        }
        
        public string GetItemText(System.IntPtr item)
        {
            CheckDisposed();
            return NativeApi.TreeView_GetItemText_(NativePointer, item);
        }
        
        public void SetItemImageIndex(System.IntPtr item, int imageIndex)
        {
            CheckDisposed();
            NativeApi.TreeView_SetItemImageIndex_(NativePointer, item, imageIndex);
        }
        
        public int GetItemImageIndex(System.IntPtr item)
        {
            CheckDisposed();
            return NativeApi.TreeView_GetItemImageIndex_(NativePointer, item);
        }
        
        public void BeginLabelEdit(System.IntPtr item)
        {
            CheckDisposed();
            NativeApi.TreeView_BeginLabelEdit_(NativePointer, item);
        }
        
        public void EndLabelEdit(System.IntPtr item, bool cancel)
        {
            CheckDisposed();
            NativeApi.TreeView_EndLabelEdit_(NativePointer, item, cancel);
        }
        
        public void ExpandItem(System.IntPtr item)
        {
            CheckDisposed();
            NativeApi.TreeView_ExpandItem_(NativePointer, item);
        }
        
        public void CollapseItem(System.IntPtr item)
        {
            CheckDisposed();
            NativeApi.TreeView_CollapseItem_(NativePointer, item);
        }
        
        public void ExpandAllChildren(System.IntPtr item)
        {
            CheckDisposed();
            NativeApi.TreeView_ExpandAllChildren_(NativePointer, item);
        }
        
        public void CollapseAllChildren(System.IntPtr item)
        {
            CheckDisposed();
            NativeApi.TreeView_CollapseAllChildren_(NativePointer, item);
        }
        
        public void EnsureVisible(System.IntPtr item)
        {
            CheckDisposed();
            NativeApi.TreeView_EnsureVisible_(NativePointer, item);
        }
        
        public void ScrollIntoView(System.IntPtr item)
        {
            CheckDisposed();
            NativeApi.TreeView_ScrollIntoView_(NativePointer, item);
        }
        
        static GCHandle eventCallbackGCHandle;
        public static TreeView? GlobalObject;
        
        static void SetEventCallback()
        {
            if (!eventCallbackGCHandle.IsAllocated)
            {
                var sink = new NativeApi.TreeViewEventCallbackType((obj, e, parameter) =>
                    UI.Application.HandleThreadExceptions(() =>
                    {
                        var w = NativeObject.GetFromNativePointer<TreeView>(obj, p => new TreeView(p));
                        w ??= GlobalObject;
                        if (w == null) return IntPtr.Zero;
                        return w.OnEvent(e, parameter);
                    }
                    )
                );
                eventCallbackGCHandle = GCHandle.Alloc(sink);
                NativeApi.TreeView_SetEventCallback_(sink);
            }
        }
        
        IntPtr OnEvent(NativeApi.TreeViewEvent e, IntPtr parameter)
        {
            switch (e)
            {
                case NativeApi.TreeViewEvent.SelectionChanged:
                {
                    OnPlatformEventSelectionChanged(); return IntPtr.Zero;
                }
                case NativeApi.TreeViewEvent.ControlRecreated:
                {
                    OnPlatformEventControlRecreated(); return IntPtr.Zero;
                }
                case NativeApi.TreeViewEvent.ItemExpanded:
                {
                    var ea = new NativeEventArgs<TreeViewItemEventData>(MarshalEx.PtrToStructure<TreeViewItemEventData>(parameter));
                    OnPlatformEventItemExpanded(ea); return ea.Result;
                }
                case NativeApi.TreeViewEvent.ItemCollapsed:
                {
                    var ea = new NativeEventArgs<TreeViewItemEventData>(MarshalEx.PtrToStructure<TreeViewItemEventData>(parameter));
                    OnPlatformEventItemCollapsed(ea); return ea.Result;
                }
                case NativeApi.TreeViewEvent.ItemExpanding:
                {
                    var ea = new NativeEventArgs<TreeViewItemEventData>(MarshalEx.PtrToStructure<TreeViewItemEventData>(parameter));
                    OnPlatformEventItemExpanding(ea); return ea.Result;
                }
                case NativeApi.TreeViewEvent.ItemCollapsing:
                {
                    var ea = new NativeEventArgs<TreeViewItemEventData>(MarshalEx.PtrToStructure<TreeViewItemEventData>(parameter));
                    OnPlatformEventItemCollapsing(ea); return ea.Result;
                }
                case NativeApi.TreeViewEvent.BeforeItemLabelEdit:
                {
                    var ea = new NativeEventArgs<TreeViewItemLabelEditEventData>(MarshalEx.PtrToStructure<TreeViewItemLabelEditEventData>(parameter));
                    OnPlatformEventBeforeItemLabelEdit(ea); return ea.Result;
                }
                case NativeApi.TreeViewEvent.AfterItemLabelEdit:
                {
                    var ea = new NativeEventArgs<TreeViewItemLabelEditEventData>(MarshalEx.PtrToStructure<TreeViewItemLabelEditEventData>(parameter));
                    OnPlatformEventAfterItemLabelEdit(ea); return ea.Result;
                }
                default: throw new Exception("Unexpected TreeViewEvent value: " + e);
            }
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate IntPtr TreeViewEventCallbackType(IntPtr obj, TreeViewEvent e, IntPtr param);
            
            public enum TreeViewEvent
            {
                SelectionChanged,
                ControlRecreated,
                ItemExpanded,
                ItemCollapsed,
                ItemExpanding,
                ItemCollapsing,
                BeforeItemLabelEdit,
                AfterItemLabelEdit,
            }
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TreeView_SetEventCallback_(TreeViewEventCallbackType callback);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr TreeView_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern long TreeView_GetCreateStyle_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TreeView_SetCreateStyle_(IntPtr obj, long value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TreeView_GetHideRoot_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TreeView_SetHideRoot_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TreeView_GetVariableRowHeight_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TreeView_SetVariableRowHeight_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TreeView_GetTwistButtons_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TreeView_SetTwistButtons_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern uint TreeView_GetStateImageSpacing_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TreeView_SetStateImageSpacing_(IntPtr obj, uint value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern uint TreeView_GetIndentation_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TreeView_SetIndentation_(IntPtr obj, uint value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TreeView_GetRowLines_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TreeView_SetRowLines_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TreeView_GetHasBorder_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TreeView_SetHasBorder_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr TreeView_GetImageList_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TreeView_SetImageList_(IntPtr obj, IntPtr value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr TreeView_GetRootItem_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.TreeViewSelectionMode TreeView_GetSelectionMode_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TreeView_SetSelectionMode_(IntPtr obj, Alternet.UI.TreeViewSelectionMode value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TreeView_GetShowLines_(IntPtr obj);
